@@ -4,6 +4,8 @@ Changelog
 0.12 - Unreleased
 -----------------
 
+* Added verbose flag to ``checkout`` and ``update`` commands.
+  [fschulze]
 
 0.11 - 2009-04-06
 -----------------
